resources/scss/_opux_layouts.scss
/* ... */
@include block('opux-card') {
  background: $OP-white;
  font-size: .9rem;
  font-weight: 400;
  position: relative;
  width: 100%;

  // opux-card--with-actions
  @include modifier('with-actions') {
    padding-bottom: 80px;
  }

  // opux-card__overlay
  @include element('overlay') {
    @include align-content(center);
    @include align-items(center);
    @include flex-direction(row);
    @include flex-wrap(wrap);
    @include flexbox;
    background: $OP-white;
    bottom: 0px;
    left: 0px;
    position: absolute;
    top: 38px;
    width: 100%;
    z-index: 9;

    // opux-card__overlay opux-content
    @include block('opux-content') {
        padding-bottom: 2rem;
    }

    // opux-card__overlay opux-button
    @include block('opux-button') {
      margin-left: auto;
      margin-right: auto;
    }
  }

  // opux-inline-icon
  @include block('opux-inline-icon') {
    width: 50%;

    &.opux-inline-icon-clock {
      padding-left: 2.5rem;
      &:before {
        left: 1rem;
      }
    }
  }

  // opux-card__status
  @include element('status') {
    background: $OP-gray-light;
    min-height: 1.2rem;
    padding: .5rem;
  }

  // opux-card__title
  @include element('title') {
    box-sizing: border-box;
    color: $basic-text-colour;
    display: block;
    font-size: 1.3rem;
    font-weight: 300;
    padding: .7rem;
    text-align: left;
    width: 100%;

    @include modifier('blog') {
        min-height: 4.7rem;
    }
  }

  // opux-card__image-container
  @include element('image-container') {
    width: 100%;
  }

  // opux-card__image
  @include element('image') {
    height: 1px;
    padding-bottom: 60%;
    width: 100%;
    background-size: cover;
    background-position: center center;
  }

  // opux-card__content
  @include element('content') {
    background: $OP-white;
    width: 100%;
  }

  // opux-card__actions
  @include element('actions') {
    background: $OP-white;
    border-top: 1px solid $OP-gray-light;
    bottom: 0px;
    box-sizing: border-box;
    left: 0px;
    padding: .8rem;
    position: absolute;
    text-align: center;
    width: 100%;
  }
}

@include block('opux-centered') {
  text-align: center;
}

@include block('opux-line') {
  margin: 2rem auto;
  border-bottom: 1px solid $OP-gray-medium;
  height: 1px;
  width: 100%;
}

@include block('opux-card-action') {
  &:before {
    @include opux-color-transition;
  }
  &:hover {
    &:before {
      color: $OP-orange;
    }
  }
}

@include block('opux-banner') {
  background-image: url('/img/banner.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin-left: -1rem;
  margin-right: -1rem;
  padding-bottom: 5rem;
  padding-top: 5rem;
  position: relative;
  width: calc(100% + 2rem);

  // opux-banner__content
  @include element('content') {
    @include align-content(center);
    @include align-items(center);
    bottom: 0px;
    box-sizing: border-box;
    color: $OP-white;
    left: 0px;
    right: 0px;
    text-shadow: 1px 1px 15px $OP-gray-medium;
    top: 0px;
  }

  // opux-banner--contain
  @include modifier('contain') {
    background-size: contain;
    padding: 0;
  }

  // opux-banner__title
  @include element('title') {
    @include flex(0, 0, 100%);
    font-size: 4rem;
    margin: 0 auto;
    max-width: $screen-large;
    padding-bottom: 2rem;
  }

  // opux-banner__body-text
  @include element('body-text') {
    @include flex(0, 0, 100%);
    font-size: 1.8rem;
    max-width: $screen-large;
    margin: 0 auto;
    padding-bottom: 2rem;
    padding-top: 2rem;
  }

  // opux-banner__subtitle
  @include element('subtitle') {
    @include flex(0, 0, 100%);
    font-size: 2.4rem;
  }
}

@include block('opux-frontpage-share') {
  margin-bottom: -3px;
  padding-top: 56px;
}

@include block('opux-index-links') {
  @include flex-direction(row);
  @include flexbox;
  width: calc(100% + 2rem);
  margin-left: -1rem;
  margin-right: -1rem;
  padding: 2rem 0 0 0;

  // opux-index-links__item
  @include element('item') {
    @include flex(1);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    box-sizing: border-box;
    color: $OP-white;
    font-weight: 400;
    padding: 3rem .5rem 7rem 1rem;
    position: relative;
    text-align: center;
    text-shadow: 0px 0px 8px $OP-dark-gray;

    p {
      font-size: 1.3rem;
      margin-left: auto;
      margin-right: auto;
      max-width: 300px;
      padding: 0 1rem;
    }

    // opux-index-links__item--browse-quests
    @include modifier('browse-quests') {
      background-image: url('/img/equality.jpg');
      border-right: 2px solid $OP-white;
    }

    // opux-index-links__item--create-quest
    @include modifier('create-quest') {
      background-image: url('/img/well-being.jpg');
    }

    // opux-index-links__item--read-stories
    @include modifier('read-stories') {
      background-image: url('/img/stories.jpg');
      border-left: 2px solid $OP-white;
    }

    // opux-index-links__item opux-button
    @include block('opux-button') {
      bottom: 3rem;
      box-sizing: border-box;
      font-size: 1.3rem;
      left: 50%;
      margin-left: -130px;
      min-width: auto;
      padding: 0px;
      position: absolute;
      text-shadow: none;
      width: 260px;
    }
  }
}

@include block('opux-footer-container') {
  border-top: 1px solid $OP-gray-light;
  bottom: .7rem;
  left: 0px;
  position: absolute;
  width: 100%;
  background: $OP-white;
}
/* ... */

